# TestEx

./: .dockerignore  .env  .gitignore  alembic.ini  docker-compose.yaml  dockerfile  pyproject.toml  test.py
alembic/: env.py
alembic/versions/: 5c9801c0d174_init.py  f447c524a02b_init.py
config_container/: rabitmq.conf
src/: config.py  database.py  dependencies.py  logging_config.py  main.py  model.py  redis_database.py  repository.py  schema.py
src/auth/: .env  config.py  depend.py  router.py  schema.py  service.py  transport.py  util.py
src/auth/schema/: response.py  token.py
src/email_celery/: .celery.env  .email.env  celery_config.py  config.py  constant.py  router.py  util.py
src/email_celery/template/: confirm_email.html  reset_password.html
test/: orm_test.py
