[project]
name = "testex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.2.0",
    "fastapi>=0.114.2",
    "passlib>=1.7.4",
    "pydantic>=2.9.1",
    "pyjwt>=2.9.0",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.34",
    "uvicorn>=0.30.6",
]
