[project]
name = "testex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.29.0",
    "bcrypt>=4.2.0",
    "celery>=5.4.0",
    "cryptography>=43.0.1",
    "email-validator>=2.2.0",
    "fastapi>=0.114.2",
    "flower>=2.0.1",
    "passlib>=1.7.4",
    "pydantic>=2.9.1",
    "pyjwt>=2.9.0",
    "python-dotenv>=1.0.1",
    "python-json-logger>=2.0.7",
    "python-multipart>=0.0.9",
    "redis>=5.0.8",
    "sentry-sdk[fastapi]>=2.14.0",
    "setuptools>=75.1.0",
    "sqlalchemy>=2.0.34",
    "structlog>=24.4.0",
    "uvicorn>=0.30.6",
]

[tool.uv]
dev-dependencies = [
    "alembic>=1.13.2",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.5",
    "rich>=13.8.1",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"

[tool.ruff]
# Set the maximum line length to 79.
line-length = 79

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
